force-app/main/default/objects/Actions_OLD__c/Actions_OLD__c.object-meta.xml
<CustomObject>
    <label>Actions (OLD)</label>
    <nameField>
        <displayFormat>Act-{0000}</displayFormat>
        <label>Act #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Actions (OLD)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>