force-app/main/default/objects/Actions_OLD__c/fields/Action_Description__c.field-meta.xml
<CustomField>
    <fullName>Action_Description__c</fullName>
    <inlineHelpText>Explain the action/tasks that need to be completed to be able to close out this Record</inlineHelpText>
    <label>Action Item Description</label>
    <type>TextArea</type>
</CustomField>