force-app/main/default/objects/Actions_OLD__c/fields/Action_Progress__c.field-meta.xml
<CustomField>
    <fullName>Action_Progress__c</fullName>
    <inlineHelpText>Ongoing notes should be made in this section to provide information on the progress of the action.  To be completed by Responsible Person</inlineHelpText>
    <label>Progress Report</label>
    <type>TextArea</type>
</CustomField>