force-app/main/default/objects/Actions_OLD__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <inlineHelpText>Select the most relevant item that describes your Change</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Document (Policy, Template)</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Procedural</fullName>
            </value>
            <value>
                <fullName>Organisation Structure (Position, Location)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>