force-app/main/default/objects/Actions_OLD__c/fields/Date_of_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Inspection__c</fullName>
    <inlineHelpText>The date of the first event for reoccurring events or date to be conducted if not reoccurring</inlineHelpText>
    <label>Date of Inspection</label>
    <type>Date</type>
</CustomField>