force-app/main/default/objects/Actions_OLD__c/fields/Documentation__c.field-meta.xml
<CustomField>
    <fullName>Documentation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MOC Required</label>
    <type>Checkbox</type>
</CustomField>