force-app/main/default/objects/Actions_OLD__c/fields/Documentation_Changes__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Changes__c</fullName>
    <inlineHelpText>Please consider and identify any documentation changes that are required to allow this action item to be completed</inlineHelpText>
    <label>Documentation Changes Required</label>
    <type>TextArea</type>
</CustomField>