force-app/main/default/objects/Actions_OLD__c/fields/HSEQ__c.field-meta.xml
<CustomField>
    <fullName>HSEQ__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HSEQ #</label>
    <referenceTo>HSEQ_Forms__c</referenceTo>
    <relationshipName>Action_Items</relationshipName>
    <type>Lookup</type>
</CustomField>