force-app/main/default/objects/Actions_OLD__c/fields/Inspection_Interval__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Interval__c</fullName>
    <inlineHelpText>Each type of inspection has a recommended time interval for when it must reoccur</inlineHelpText>
    <label>Inspection Interval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>6 Months</fullName>
            </value>
            <value>
                <fullName>One Year</fullName>
            </value>
            <value>
                <fullName>Two Year</fullName>
            </value>
            <value>
                <fullName>Three Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>