force-app/main/default/objects/Actions_OLD__c/fields/Inspection_Type__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Type__c</fullName>
    <inlineHelpText>The type of inspection that will be reoccurring</inlineHelpText>
    <label>Inspection Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Test and Tag</fullName>
            </value>
            <value>
                <fullName>Wire Cable</fullName>
            </value>
            <value>
                <fullName>NDT</fullName>
            </value>
            <value>
                <fullName>PRV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>