force-app/main/default/objects/Actions_OLD__c/fields/Management_Category__c.field-meta.xml
<CustomField>
    <fullName>Management_Category__c</fullName>
    <label>Management Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Required</fullName>
                <default>true</default>
                <label>Required</label>
            </value>
            <value>
                <fullName>Delay - Decision Pending</fullName>
            </value>
            <value>
                <fullName>Delay - Unit Stacked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>