force-app/main/default/objects/Actions_OLD__c/fields/MOC__c.field-meta.xml
<CustomField>
    <fullName>MOC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MOC#</label>
    <referenceTo>Manage_Of_Change__c</referenceTo>
    <relationshipName>Action_Items</relationshipName>
    <type>Lookup</type>
</CustomField>