force-app/main/default/objects/Actions_OLD__c/fields/QA_Source__c.field-meta.xml
<CustomField>
    <fullName>QA_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QA Source</label>
    <referenceTo>QA__c</referenceTo>
    <relationshipName>Action_Items</relationshipName>
    <type>Lookup</type>
</CustomField>