force-app/main/default/objects/Actions_OLD__c/fields/Reoccurring__c.field-meta.xml
<CustomField>
    <fullName>Reoccurring__c</fullName>
    <inlineHelpText>Does this event continually reoccur at a set interval</inlineHelpText>
    <label>Reoccurring</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>