force-app/main/default/objects/Actions_OLD__c/fields/Responsible_Person__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Person who is assigned to ensure that the task is completed to company expectations</inlineHelpText>
    <label>Responsible Person</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipName>Action_Items</relationshipName>
    <type>Lookup</type>
</CustomField>