force-app/main/default/objects/Actions_OLD__c/fields/Risk_Assessment_Required__c.field-meta.xml
<CustomField>
    <fullName>Risk_Assessment_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Risk Assessment Required</label>
    <type>Checkbox</type>
</CustomField>