force-app/main/default/objects/Actions_OLD__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <inlineHelpText>The source/reason of where the idea for the change was orginated</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Audit - External</fullName>
            </value>
            <value>
                <fullName>Audit - Internal</fullName>
            </value>
            <value>
                <fullName>Incident</fullName>
            </value>
            <value>
                <fullName>Field Safety Inspection</fullName>
            </value>
            <value>
                <fullName>Management Field Visit</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
                <default>true</default>
                <label>Meeting</label>
            </value>
            <value>
                <fullName>Field Safety Visit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>