force-app/main/default/objects/Actions_OLD__c/fields/Source_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_ID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The record from which the HSEQ Action orginated</inlineHelpText>
    <label>Source ID#</label>
    <referenceTo>HSEQ_Forms__c</referenceTo>
    <relationshipName>HSEQ_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>