force-app/main/default/objects/Actions_OLD__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The Unit where the Action Item stemmed from</inlineHelpText>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipName>Corrective_Actions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>