force-app/main/default/objects/Actions_OLD__c/recordTypes/Action_Item.recordType-meta.xml
<RecordType>
    <fullName>Action_Item</fullName>
    <active>true</active>
    <label>Action Item</label>
</RecordType>