force-app/main/default/objects/Actions_OLD__c/recordTypes/Action_Item_Change.recordType-meta.xml
<RecordType>
    <fullName>Action_Item_Change</fullName>
    <active>true</active>
    <label>Action Item Change</label>
</RecordType>