force-app/main/default/objects/Actions_OLD__c/listViews/Action_Items_closed.listView-meta.xml
<ListView>
    <fullName>Action_Items_closed</fullName>
    <columns>MOC__c</columns>
    <columns>HSEQ__c</columns>
    <columns>NAME</columns>
    <columns>QA_Source__c</columns>
    <columns>Source__c</columns>
    <columns>Date_Created__c</columns>
    <columns>Unit__c</columns>
    <columns>Action_Description__c</columns>
    <columns>Responsible_Person__c</columns>
    <columns>Action_Progress__c</columns>
    <columns>Target_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Completion_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <filters>
        <field>Date_Created__c</field>
        <operation>greaterOrEqual</operation>
        <value>9/1/2015</value>
    </filters>
    <filters>
        <field>Date_Created__c</field>
        <operation>lessOrEqual</operation>
        <value>9/13/2016</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Actions_OLD__c.Action_Item</value>
    </filters>
    <label>open from 1/09/2015 - 13/09/2016 (Blair)</label>
    <sharedTo>
        <group>Electrician</group>
        <group>Fabrication</group>
        <group>HR</group>
        <group>Managing_Director</group>
        <group>Mechanics_Roma</group>
        <group>OPs_super</group>
        <group>Safety</group>
    </sharedTo>
</ListView>